feat: 리스트 데이터 불변성 보장을 위한 사용 메서드 변경